--- a/src/_data/people.yml
+++ b/src/_data/people.yml
@@ -24,6 +24,22 @@
 
 - id: cian_clarke
   name: 'Cian Clarke'
+  title: 'Head/Global Director of AI at Nearform'
+  summary: 'Cian Clarke leads practical AI delivery at Nearform, championing spec-driven development as a foundation for scalable, enterprise-grade AI engineering. He emphasizes structured context, repeatable workflows, and robust delivery automation over one-shot prompt coding, and has held leadership roles in engineering, solutions architecture, and open-source AI/NLP tooling.'
+  profile_image: 'https://media.licdn.com/dms/image/C4E03AQEEXAMPLE/profile-displayphoto-shrink_200_200/0/0000000000000?e=00000000&v=beta&t=EXAMPLE'
+  social_links:
+    - label: 'LinkedIn'
+      url: 'https://ie.linkedin.com/in/cianclarke'
+    - label: 'Instagram'
+      url: 'https://www.instagram.com/cianclarke/'
+    - label: 'X (Twitter)'
+      url: 'https://x.com/cianclarke'
+    - label: 'Nearform on X'
+      url: 'https://x.com/nearform'
+    - label: 'YouTube talk'
+      url: 'https://www.youtube.com/watch?v=WpH3g3kjFus'
+    - label: 'Personal website'
+      url: 'https://www.cianclarke.com/'
   links:
     - label: 'From Vibe Coding to Spec-Driven Development'
       url: 'https://tessl.io/blog/from-vibe-coding-to-spec-driven-development/'
