--- a/src/_data/people.yml
+++ b/src/_data/people.yml
@@ -26,7 +26,8 @@
   name: 'Cian Clarke'
   title: 'Head/Global Director of AI at Nearform'
   summary: 'Cian Clarke leads practical AI delivery at Nearform, championing spec-driven development as a foundation for scalable, enterprise-grade AI engineering. He emphasizes structured context, repeatable workflows, and robust delivery automation over one-shot prompt coding, and has held leadership roles in engineering, solutions architecture, and open-source AI/NLP tooling.'
-  profile_image: '/images/people/cian_clarke.png'
+  profile_image_local: '/images/people/cian_clarke.png'
+  profile_image_remote: 'https://github.com/cianclarke.png'
   social_links:
     - label: 'LinkedIn'
       url: 'https://ie.linkedin.com/in/cianclarke'
