Rename Profiles to Connect, add back Nearform on X link

--- a/src/_data/people.yml
+++ b/src/_data/people.yml
@@ -24,25 +24,25 @@
 
 - id: cian_clarke
   name: 'Cian Clarke'
-  title: 'Head/Global Director of AI at Nearform'
+  title: 'Head of AI at Nearform'
   summary: 'Cian Clarke leads practical AI delivery at Nearform, championing spec-driven development as a foundation for scalable, enterprise-grade AI engineering. He emphasizes structured context, repeatable workflows, and robust delivery automation over one-shot prompt coding, and has held leadership roles in engineering, solutions architecture, and open-source AI/NLP tooling.'
   profile_image_local: '/images/people/cian_clarke.png'
   profile_image_remote: 'https://github.com/cianclarke.png'
   social_links:
     - label: 'LinkedIn'
       url: 'https://ie.linkedin.com/in/cianclarke'
-    - label: 'Instagram'
-      url: 'https://www.instagram.com/cianclarke/'
-    - label: 'X (Twitter)'
-      url: 'https://x.com/cianclarke'
-    - label: 'Nearform on X'
-      url: 'https://x.com/nearform'
-    - label: 'YouTube talk'
-      url: 'https://www.youtube.com/watch?v=WpH3g3kjFus'
-    - label: 'Personal website'
-      url: 'https://www.cianclarke.com/'
     - label: 'GitHub'
       url: 'https://github.com/cianclarke'
+    - label: 'X (Twitter)'
+      url: 'https://x.com/cianclarke'
+    - label: 'Personal website'
+      url: 'https://www.cianclarke.com/'
+    - label: 'YouTube talk'
+      url: 'https://www.youtube.com/watch?v=WpH3g3kjFus'
+    - label: 'Instagram'
+      url: 'https://www.instagram.com/cianclarke/'
+    - label: 'Nearform on X'
+      url: 'https://x.com/nearform'
   links:
     - label: 'From Vibe Coding to Spec-Driven Development'
       url: 'https://tessl.io/blog/from-vibe-coding-to-spec-driven-development/'
