Add domains, people profiles, search, and cross-domain calibration
- Domain architecture: 4 domains (architecture, IA, UX, agentic) with landing pages
- Artifact metadata: primary_domain, secondary_domains, perspective on articles/blocks/concepts
- People: advanced profiles with slugs, 20 pre-seeded individuals
- Search: build-time index, header bar, dedicated /search/ page
- Cross-domain calibration: 3 sources, UX Principles article
- Playwright smoke tests

--- a/src/_data/reading_tag_groups.yml
+++ b/src/_data/reading_tag_groups.yml
@@ -29,3 +29,7 @@
 - id: usability-inspection
   title: 'Usability Inspection and Heuristic Evaluation'
   description: 'References that define heuristic evaluation and other inspection methods used to catch usability issues before user testing.'
+
+- id: cross-domain-calibration
+  title: 'Cross-Domain Calibration: UX and Agentic AI'
+  description: 'Articles that bridge UX research and agentic AI, exploring how design principles and user experience models must adapt when systems act with greater autonomy.'
