--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A structured content system using Eleventy for assembling articles from reusable blocks",
   "scripts": {
     "prepare-profile-images": "node scripts/prepare-profile-images.js",
-    "build": "eleventy",
+    "build:search": "node scripts/build-search-index.js",
+    "build": "npm run build:search && eleventy",
     "lint": "prettier --check \"eleventy.config.js\" \"package.json\" \"src/**/*.{css,js,json,md,yml,yaml}\"",
     "start": "eleventy --serve",
     "clean": "rm -rf dist"
@@ -19,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
+    "@playwright/test": "^1.58.1",
     "js-yaml": "^4.1.1",
     "prettier": "^3.3.3"
   }
