--- a/src/_data/people.yml
+++ b/src/_data/people.yml
@@ -24,8 +24,12 @@
 
 - id: cian_clarke
   name: 'Cian Clarke'
+  slug: cian-clarke
   title: 'Head of AI at Nearform'
-  summary: 'Cian Clarke leads practical AI delivery at Nearform, championing spec-driven development as a foundation for scalable, enterprise-grade AI engineering. He emphasizes structured context, repeatable workflows, and robust delivery automation over one-shot prompt coding, and has held leadership roles in engineering, solutions architecture, and open-source AI/NLP tooling.'
+  primary_domain: agentic
+  secondary_domains:
+    - architecture
+  profile_summary: 'Cian Clarke leads practical AI delivery at Nearform, championing spec-driven development as a foundation for scalable, enterprise-grade AI engineering. He emphasizes structured context, repeatable workflows, and robust delivery automation over one-shot prompt coding, and has held leadership roles in engineering, solutions architecture, and open-source AI/NLP tooling.'
   profile_image_local: '/images/people/cian_clarke.png'
   profile_image_remote: 'https://github.com/cianclarke.png'
   social_links:
@@ -225,11 +229,23 @@
 
 - id: andrej_karpathy
   name: 'Andrej Karpathy'
-  links:
-    - label: '"A few random notes from Claude Coding" (X thread)'
+  slug: andrej-karpathy
+  primary_domain: agentic
+  secondary_domains: []
+  profile_summary: 'Andrej Karpathy is a leading AI researcher and former director of AI at Tesla. He co-founded OpenAI and has made foundational contributions to deep learning, computer vision, and large language models. His work on CNNs, ImageNet, and neural network training has shaped modern AI. He now focuses on AI coding tools and has publicly reflected on how Claude Code and similar systems are changing software engineering practice.'
+  profile_image_remote: 'https://karpathy.ai/images/ak.jpg'
+  social_links:
+    - label: 'Personal site'
+      url: 'https://karpathy.ai'
+    - label: 'X (Twitter)'
+      url: 'https://x.com/karpathy'
+  featured_works:
+    - title: '"A few random notes from Claude Coding" (X thread)'
       url: 'https://x.com/karpathy/status/2015883857489522876'
-    - label: 'Ex-Tesla AI boss notices "atrophy" of manual coding skills as AI gains'
-      url: 'https://www.businessinsider.com/andrej-karpathy-claude-code-manual-skills-atrophy-software-engineering-tesla-2026-1'
+      year: '2025'
+    - title: 'Neural Networks: Zero to Hero'
+      url: 'https://karpathy.ai/zero-to-hero.html'
+      year: '2022'
 
 - id: boris_cherny
   name: 'Boris Cherny'
@@ -275,3 +291,205 @@
   links:
     - label: 'How Boris Cherny, builder of Claude Code, uses it — and why that should change how you think about AI'
       url: 'https://dev.to/with_attitude/how-boris-cherny-builder-of-claude-code-uses-it-and-why-that-should-change-how-you-think-about-173g'
+
+# Pre-seeded domain anchors (Architecture)
+- id: melvin_conway
+  name: 'Melvin Conway'
+  slug: melvin-conway
+  primary_domain: architecture
+  secondary_domains: []
+  profile_summary: "Melvin Conway is a computer scientist known for Conway's Law: organizations design systems that mirror their communication structure. His work on the relationship between organizational structure and system architecture has influenced software engineering, distributed systems, and how teams structure technical work."
+  featured_works:
+    - title: "Conway's Law"
+      url: 'https://en.wikipedia.org/wiki/Conway%27s_law'
+      year: ''
+
+- id: eberhardt_rechtin
+  name: 'Eberhardt Rechtin'
+  slug: eberhardt-rechtin
+  primary_domain: architecture
+  secondary_domains: []
+  profile_summary: 'Eberhardt Rechtin was a pioneering systems architect who developed the discipline of systems architecting. He worked on spacecraft and defense systems at JPL and DARPA, and his frameworks for heuristics, stakeholder analysis, and quality attributes have shaped how complex systems are designed and evaluated.'
+  featured_works:
+    - title: 'Systems Architecting'
+      url: 'https://www.amazon.com/Systems-Architecting-Organizations-Eberhardt-Rechtin/dp/0849378360'
+      year: '1991'
+
+- id: herbert_a_simon
+  name: 'Herbert A. Simon'
+  slug: herbert-a-simon
+  primary_domain: architecture
+  secondary_domains:
+    - ia
+  profile_summary: 'Herbert A. Simon was a Nobel laureate in economics and a pioneer in artificial intelligence, cognitive science, and organizational theory. His work on bounded rationality, satisficing, and the structure of ill-structured problems has influenced design, architecture, and how we understand human and machine decision-making.'
+  featured_works:
+    - title: 'The Sciences of the Artificial'
+      url: 'https://mitpress.mit.edu/9780262691918/the-sciences-of-the-artificial/'
+      year: '1969'
+
+- id: stafford_beer
+  name: 'Stafford Beer'
+  slug: stafford-beer
+  primary_domain: architecture
+  secondary_domains: []
+  profile_summary: 'Stafford Beer was a theorist of management cybernetics and organizational design. His Viable System Model describes how organizations must be structured to remain adaptable and responsive. His work on real-time management and the relationship between information systems and organizational viability has influenced systems thinking and governance.'
+  featured_works:
+    - title: 'Brain of the Firm'
+      url: 'https://en.wikipedia.org/wiki/Brain_of_the_Firm'
+      year: '1972'
+
+# Pre-seeded domain anchors (Information Architecture)
+- id: richard_saul_wurman
+  name: 'Richard Saul Wurman'
+  slug: richard-saul-wurman
+  primary_domain: ia
+  secondary_domains:
+    - ux
+  profile_summary: 'Richard Saul Wurman is an architect and designer who coined the term "information architecture" and founded the TED conference. His work on making complex information understandable—through events, books, and exhibitions—has shaped how we think about organizing and presenting information for comprehension.'
+  featured_works:
+    - title: 'Information Anxiety'
+      url: 'https://www.goodreads.com/book/show/83366.Information_Anxiety'
+      year: '1989'
+
+- id: peter_morville
+  name: 'Peter Morville'
+  slug: peter-morville
+  primary_domain: ia
+  secondary_domains:
+    - ux
+  profile_summary: 'Peter Morville is a pioneer in information architecture and user experience. He co-authored "Information Architecture for the World Wide Web" and has shaped how organizations structure findability, navigation, and search. His work on ambient findability and cross-channel experience design bridges IA and UX practice.'
+  social_links:
+    - label: 'Semantic Studios'
+      url: 'https://semanticstudios.com'
+    - label: 'Publications'
+      url: 'https://semanticstudios.com/publications/'
+  featured_works:
+    - title: 'Information Architecture for the World Wide Web'
+      url: 'https://www.oreilly.com/library/view/information-architecture-for/0596527349/'
+      year: '2006'
+
+- id: abby_covert
+  name: 'Abby Covert'
+  slug: abby-covert
+  primary_domain: ia
+  secondary_domains:
+    - ux
+  profile_summary: 'Abby Covert is an information architect and author of "How to Make Sense of Any Mess." She focuses on helping teams align on language, structure, and meaning. Her work on taxonomies, mental models, and collaborative sense-making has influenced how product and design teams approach information problems.'
+  social_links:
+    - label: 'Personal site'
+      url: 'https://abbycovert.com'
+  featured_works:
+    - title: 'How to Make Sense of Any Mess'
+      url: 'https://abbycovert.com/books/'
+      year: '2014'
+
+- id: kim_goodwin
+  name: 'Kim Goodwin'
+  slug: kim-goodwin
+  primary_domain: ia
+  secondary_domains:
+    - ux
+  profile_summary: 'Kim Goodwin is a design leader and author of "Designing for the Digital Age." She has led design at Cooper and other firms, developing goal-directed design methods and frameworks for translating research into coherent product structure. Her work bridges IA, interaction design, and design leadership.'
+  featured_works:
+    - title: 'Designing for the Digital Age'
+      url: 'https://www.oreilly.com/library/view/designing-for-the/9781118766576/'
+      year: '2009'
+
+# Pre-seeded domain anchors (UX Research & Design)
+- id: jared_spool
+  name: 'Jared Spool'
+  slug: jared-spool
+  primary_domain: ux
+  secondary_domains: []
+  profile_summary: 'Jared Spool is a UX researcher and founder of User Interface Engineering (UIE). He has advocated for evidence-based design, usability testing, and design maturity in organizations. His work on design ops, design systems, and the business impact of UX has influenced how design teams scale and demonstrate value.'
+  social_links:
+    - label: 'UIE'
+      url: 'https://uie.com'
+  featured_works:
+    - title: 'UIE'
+      url: 'https://uie.com'
+      year: ''
+
+- id: dana_chisnell
+  name: 'Dana Chisnell'
+  slug: dana-chisnell
+  primary_domain: ux
+  secondary_domains: []
+  profile_summary: 'Dana Chisnell is a usability researcher and civic design advocate. She has led research on ballot design, voting systems, and government services. Her work on plain language, accessibility, and inclusive design has influenced how public-facing systems are tested and improved for diverse users.'
+  featured_works:
+    - title: 'Handbook of Usability Testing'
+      url: 'https://www.wiley.com/en-us/Handbook+of+Usability+Testing%2C+2nd+Edition-p-9780470185483'
+      year: '2008'
+
+- id: don_norman
+  name: 'Don Norman'
+  slug: don-norman
+  primary_domain: ux
+  secondary_domains:
+    - ia
+  profile_summary: 'Don Norman is a cognitive scientist and design theorist who coined the term "user experience." He has shaped design thinking through concepts like affordances, mental models, and emotional design. His work at Apple, Nielsen Norman Group, and in academia has influenced how we understand human-centered design.'
+  social_links:
+    - label: 'jnd.org'
+      url: 'https://jnd.org'
+  featured_works:
+    - title: 'The Design of Everyday Things'
+      url: 'https://jnd.org/books/'
+      year: '2013'
+
+- id: erika_hall
+  name: 'Erika Hall'
+  slug: erika-hall
+  primary_domain: ux
+  secondary_domains:
+    - ia
+  profile_summary: 'Erika Hall is a design researcher and co-founder of Mule Design. She has advocated for research-driven design, inclusive language, and the strategic role of design in organizations. Her work on conversational design, research methods, and design ethics has influenced UX practice and education.'
+  social_links:
+    - label: 'Personal site'
+      url: 'https://erikahall.com'
+  featured_works:
+    - title: 'Just Enough Research'
+      url: 'https://abookapart.com/products/just-enough-research'
+      year: '2013'
+
+# Pre-seeded domain anchors (Agentic Technology & AI Systems)
+- id: dario_amodei
+  name: 'Dario Amodei'
+  slug: dario-amodei
+  primary_domain: agentic
+  secondary_domains: []
+  profile_summary: 'Dario Amodei is CEO of Anthropic and a leading AI safety researcher. He co-founded Anthropic to build reliable, interpretable, and steerable AI systems. His research on AI alignment, scalable oversight, and constitutional AI has shaped how frontier labs approach safety and capability in large language models.'
+  social_links:
+    - label: 'Anthropic Research'
+      url: 'https://www.anthropic.com/research'
+  featured_works:
+    - title: 'Constitutional AI'
+      url: 'https://www.anthropic.com/research/constitutional-ai-harmlessness-from-ai-feedback'
+      year: '2022'
+
+- id: yoshua_bengio
+  name: 'Yoshua Bengio'
+  slug: yoshua-bengio
+  primary_domain: agentic
+  secondary_domains: []
+  profile_summary: 'Yoshua Bengio is a Turing Award-winning AI researcher and professor at Université de Montréal. His work on deep learning, neural networks, and representation learning has been foundational to modern AI. He now focuses on AI safety, responsible AI development, and the societal implications of advanced AI systems.'
+  social_links:
+    - label: 'Personal site'
+      url: 'https://yoshuabengio.org'
+  featured_works:
+    - title: 'Deep Learning (book)'
+      url: 'https://www.deeplearningbook.org/'
+      year: '2016'
+
+- id: paul_christiano
+  name: 'Paul Christiano'
+  slug: paul-christiano
+  primary_domain: agentic
+  secondary_domains: []
+  profile_summary: 'Paul Christiano is an AI alignment researcher and founder of the Alignment Research Center. His work on scalable oversight, RLHF, and iterated amplification has influenced how AI labs approach human feedback and value learning. He has shaped the technical agenda for making advanced AI systems safe and aligned.'
+  social_links:
+    - label: 'Personal site'
+      url: 'https://paulchristiano.com'
+  featured_works:
+    - title: 'AI alignment forum'
+      url: 'https://www.alignmentforum.org/'
+      year: ''
