Enhance source summaries with structured metadata fields
Add source_type, key_takeaways, relevance, and notable_quotes fields to
source summaries. Update AGENTS.md with comprehensive guidance for the new
format. Modify summary template to display type badges, relevance callouts,
and styled quote blocks. Add CSS for source type badges and new summary
sections.

All 67 sources now have source_type classification. Key sources include
full metadata with takeaways and relevance context.

--- a/src/_data/people.yml
+++ b/src/_data/people.yml
@@ -392,7 +392,7 @@
   profile_summary: 'Kim Goodwin is a design leader and author of "Designing for the Digital Age." She has led design at Cooper and other firms, developing goal-directed design methods and frameworks for translating research into coherent product structure. Her work bridges IA, interaction design, and design leadership.'
   featured_works:
     - title: 'Designing for the Digital Age'
-      url: 'https://www.oreilly.com/library/view/designing-for-the/9781118766576/'
+      url: 'https://www.wiley.com/en-us/Designing+for+the+Digital+Age%3A+How+to+Create+Human-Centered+Products+and+Services-p-9780470229101'
       year: '2009'
 
 # Pre-seeded domain anchors (UX Research & Design)
